# SiWECAL-PrototypeSim

./: README.md
generation/: README.md  confs.py
generation/run_scripts/Simu2025-06/: CMake.sh  CMakeLists.txt  LICENSE  env.sh
generation/run_scripts/Simu2025-06/install/lib64/: libDD4hepTutorials.components  libsdaction.components
generation/run_scripts/Simu2025-06/scripts/: plot_cell_energy_sum.C  plot_cell_energy_sum.py
generation/run_scripts/Simu2025-06/sdaction/: CMakeLists.txt
generation/run_scripts/Simu2025-06/sdaction/src/: simplecaloSDAction.cpp
generation/run_scripts/Simu2025-06/simplecalo1/: sc1SteeringFile.py
generation/run_scripts/Simu2025-06/simplecalo1/compact/: simplecalo1.xml
generation/run_scripts/Simu2025-06/simplecalo1/include/: sc1_solution1.h  sc1_solution2.h
generation/run_scripts/Simu2025-06/simplecalo1/src/: simplecalo1.cpp
generation/run_scripts/Simu2025-06/simplecalo2/: Submit.sh  Test_Submit.sh.o766812  sc2SteeringFile.py  vis.sh
generation/run_scripts/Simu2025-06/simplecalo2/Submit/0.05GeV/: run.sh  sc2SteeringFile.py
generation/run_scripts/Simu2025-06/simplecalo2/Submit/0.15GeV/: run.sh  sc2SteeringFile.py
generation/run_scripts/Simu2025-06/simplecalo2/Submit/0.1GeV/: run.sh  run.sh.o649766  sc2SteeringFile.py
generation/run_scripts/Simu2025-06/simplecalo2/Submit/0.25GeV/: run.sh  run.sh.o649769  sc2SteeringFile.py
generation/run_scripts/Simu2025-06/simplecalo2/compact/: CONF0.xml  CONF1.xml  CONF2.xml  README
generation/run_scripts/Simu2025-06/simplecalo2/include/: sc2_solution1.h
generation/run_scripts/Simu2025-06/simplecalo2/src/: simplecalo2.cpp
(+387 files in other folders)
